--- a/src/BlogBundle/Resources/config/routing.yml
+++ b/src/BlogBundle/Resources/config/routing.yml
@@ -1,26 +1,26 @@
 blog_homepage:
     path:     /
-    defaults: { _controller: BlogBundle:Default:index }
+    defaults: { _controller: BlogBundle:Post:index }
 
 add_article:
     path: /add
-    defaults: { _controller: BlogBundle:Default:add}
+    defaults: { _controller: BlogBundle:Post:add}
 
 blog_show:
     path: /{id}
     defaults:
-        _controller : BlogBundle:Default:show
+        _controller : BlogBundle:Post:show
     requirements:
             id: \d+
 edit:
     path: /edit/{id}
     defaults:
-        _controller : BlogBundle:Default:edit
+        _controller : BlogBundle:Post:edit
     requirements:
             id: \d+
 delete:
     path: /delete/{id}
     defaults:
-        _controller : BlogBundle:Default:delete
+        _controller : BlogBundle:Post:delete
     requirements:
             id: \d+
