--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,14 @@ blog:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+login:
+    path: /login
+    defaults:
+        _controller: UserBundle:Security:login
+
+login_check:
+    path: /login_check
+
+logout:
+    path: /logout
