--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,33 @@
-# To get started with security, check out the documentation:
-# http://symfony.com/doc/current/security.html
-security:
 
-    # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+security:
     providers:
-        in_memory:
-            memory: ~
+      main:
+        entity:
+          class:    OC\UserBundle\Entity\User
+          property: username
+
+    encoders:
+      Symfony\Component\Security\Core\User\User: sha512
+      OC\UserBundle\Entity\User: sha512
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+      dev:
+         pattern: ^/(_(profiler|wdt)|css|images|js)/
+         security: false
 
-        main:
-            anonymous: ~
-            # activate different ways to authenticate
+      main:
+        pattern:   ^/
+        anonymous: true
+        provider:  main
+      form_login:
+        login_path: login
+        check_path: login_check
+      logout:
+        path:       logout
+        target:     login
 
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
+    role_hierarchy :
+        ROLE_ADMIN : ROLE_USER
 
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
-            #form_login: ~
+
