--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,31 +1,31 @@
 
 security:
     providers:
-      main:
-        entity:
-          class:    OC\UserBundle\Entity\User
-          property: username
+          main:
+              entity:
+                  class:    UserBundle\Entity\User
+                  property: username
 
     encoders:
-      Symfony\Component\Security\Core\User\User: sha512
-      OC\UserBundle\Entity\User: sha512
+        Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\User: plaintext
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-      dev:
-         pattern: ^/(_(profiler|wdt)|css|images|js)/
-         security: false
+         dev:
+             pattern: ^/(_(profiler|wdt)|css|images|js)/
+             security: false
 
-      main:
-        pattern:   ^/
-        anonymous: true
-        provider:  main
-      form_login:
-        login_path: login
-        check_path: login_check
-      logout:
-        path:       logout
-        target:     login
+         main:
+             pattern:   ^/
+             anonymous: true
+             provider:  main
+             form_login:
+                 login_path: login
+                 check_path: login_check
+             logout:
+                 path:       logout
+                 target:     login
 
     role_hierarchy :
         ROLE_ADMIN : ROLE_USER
